<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            tools:context=".ui.DetailsActivity"
            android:layout_width="match_parent"
...
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                app:mtv_useDenseSpacing="true"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/fab_margin"
                android:tint="@android:color/white"
                app:srcCompat="@android:drawable/ic_input_add"/>
...
