<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
                                              android:orientation="vertical"
                                              android:id="@+id/item_container"
                                              android:layout_width="wrap_content"
                                              android:layout_height="wrap_content"
                                              android:layout_margin="4dp"
                                              android:elevation="4dp"
                                              android:paddingLeft="16dp"
                                              android:paddingRight="16dp"
                                              android:paddingBottom="8dp"
                                              android:paddingTop="8dp">

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/trnt_item_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="@dimen/material_text_title"/>

</androidx.appcompat.widget.LinearLayoutCompat>